--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@tailwindcss/postcss": "^4.1.4",
+    "lucide-react": "^0.511.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
